# digicert_library

./: .gitignore  CMakeLists.txt  README.md
include/: Book.hpp  DataSource.hpp  FileDataSource.hpp  LibraryService.hpp  LibraryUtility.hpp  Logger.hpp
src/: Book.cpp  FileDataSource.cpp  LibraryService.cpp  LibraryUtility.cpp  Logger.cpp
tests/: DigiCertLibrary.cpp  InMemoryDataSource.cpp  MockLibrary.cpp  TestLibrary.cpp
